--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>Biodata</title>
 </head>
 <body>
+	<table align="center"> 
+		<tr>
+			<td>
+				Nama : Faiz Amanulloh
+			</td>
+		</tr>
+		<tr>
+			<td>
+				NIM  : 6701194029
+			</td>
+		</tr>
+		<tr>
+			<td>
+				TTL  : Kuningan, 26 Oktober 2001
+			</td>
+		</tr>
+		<tr>
+			<td>
+				IPK terakhir : 3.62
+			</td>
+		</tr>
+	</table>
 
 </body>
 </html>
