--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
 				IPK terakhir : 3.62
 			</td>
 		</tr>
+		<tr>
+			<td>
+				Dosen Wali : Muthia Qana'a (MQA)
+			</td>
+		</tr>
 	</table>
 
 </body>
